--- a/DM2022-Lab1-Homework.ipynb
+++ b/DM2022-Lab1-Homework.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name: 黃恩平\n",
     "\n",
-    "Student ID:\n",
+    "Student ID: 111033622\n",
     "\n",
-    "GitHub ID:"
+    "GitHub ID: npinghuang"
    ]
   },
   {
