--- a/DM2022-Lab1-Homework.ipynb
+++ b/DM2022-Lab1-Homework.ipynb
@@ -890,9 +890,8 @@
    "metadata": {},
    "source": [
     "### 3.4 Dimensionality Reduction\n",
-    "See the data distribution of differest source and score\n",
-    "\n",
-    "2D PCA"
+    " See the data distribution of differest source and score   \n",
+    " 2D PCA"
    ]
   },
   {
@@ -2598,7 +2597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### By using **wordcloud visualization**, the different keyword of good and bad reviews are apparent, which are **good, great, well...** for data with score = 1, and **bad, terrible, worst...** for data with score = 0."
+    "By using **wordcloud visualization**, the different keyword of good and bad reviews are apparent, which are **good, great, well...** for data with score = 1, and **bad, terrible, worst...** for data with score = 0."
    ]
   },
   {
@@ -3114,7 +3113,7 @@
     "transformer = TfidfTransformer(smooth_idf=True)\n",
     "Z = transformer.fit_transform(X)\n",
     "print(\"IDF\")\n",
-    "pd.DataFrame([transformer.idf_], columns=vectorizer.get_feature_names())"
+    "pd.DataFrame([transformer.idf_], columns=vectorizer.get_feature_names_out())"
    ]
   },
   {
@@ -3323,8 +3322,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Remove phrases that doesn't affect the sentiment :\n",
-    "The aim of this classification is to perdict whether the review is positive or negative. So instead of analyzing each word including words such as **the, and, is...**, we should remove those during the preprocessing to improve the efficiency."
+    "1. **Remove phrases that doesn't affect the sentiment :**  \n",
+    " The aim of this classification is to perdict whether the review is positive or negative. So instead of analyzing each word including words such as **the, and, is...**, we should remove those during the preprocessing to improve the efficiency.\n",
+    "\n",
+    "2. **Store the output data of frequently called function :**  \n",
+    " For function such as **count_vect.get_feature_names_out()**, which is frequently used when plotting, by storing it value instead of computing each time being called can make the code more efficient."
    ]
   }
  ],
